--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <tbody id="smart_contract_ledger">
                     </tbody>
             </table>
-            <button class="nft-button" onclick="window.open('https://github.com/jjulddugi65/pibot/blob/main/index.html', '_blank')">
+            <button class="nft-button" onclick="window.open('https://github.com/jjulddugi65/maxtr/blob/main/index.html', '_blank')">
                 Go to Pi NFT Marketplace (Concept) 🚀
             </button>
         </div>
@@ -239,7 +239,7 @@
         let transactionID = 18; 
         const maxNodes = 10001;
         let authenticatedUser = null;                   
-        const MOCK_PUBLIC_KEY_SHORT = 'GDUVQR...QO6';           
+        const MOCK_PUBLIC_KEY_SHORT = 'GATMBR...Q06';           
         const KYC_ID = '10821';         
         const mockUsername = KYC_ID + '_' + MOCK_PUBLIC_KEY_SHORT; 
 
